// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add new items 1`] = `
Object {
  "items": Array [
    Object {
      "id": "chesterton-book",
      "image": "",
      "name": "Book of K. G. Chesterton",
      "price": 15.55,
    },
  ],
}
`;

exports[`should add new items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "id": "chesterton-book",
        "image": "",
        "name": "Chesterton",
        "price": 15.55,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "id": "chesterton-book",
        "image": "",
        "name": "Book of K. G. Chesterton",
        "price": 15.55,
      },
    ],
  },
]
`;

exports[`should add new items 3`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "id": "chesterton-book",
      "image": "",
      "name": "Chesterton",
      "price": 15.55,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Book of K. G. Chesterton",
  },
]
`;
